--- a/twitter_hate_speech.ipynb
+++ b/twitter_hate_speech.ipynb
@@ -34,7 +34,7 @@
         "from tensorflow.keras.preprocessing.text import Tokenizer\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences"
       ],
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -44,12 +44,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ppKiUBjOOfJ7",
-        "outputId": "37c45afc-7d8d-4c93-9746-3873559a0a45"
+        "outputId": "244813f9-0296-46a0-8255-d2afe55d1c19"
       },
       "source": [
         "!gdown --id 1MhaG0zI4Zjt4ion5QXENwY8RK3YQfFOf"
       ],
-      "execution_count": 17,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,7 +58,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1MhaG0zI4Zjt4ion5QXENwY8RK3YQfFOf\n",
             "To: /content/Dataset for Detection of Cyber-Trolls.json.zip\n",
-            "\r  0% 0.00/686k [00:00<?, ?B/s]\r100% 686k/686k [00:00<00:00, 98.1MB/s]\n"
+            "\r  0% 0.00/686k [00:00<?, ?B/s]\r100% 686k/686k [00:00<00:00, 45.2MB/s]\n"
           ]
         }
       ]
@@ -105,7 +105,7 @@
         "\n",
         "  return (randomized_training_data, randomized_training_label)"
       ],
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "\n",
         "  return (padded_sequences, arrayed_labels)"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
         "\n",
         "  return (training_datas, training_labels, validation_datas, validation_labels)"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
         "  matriks = tf.math.confusion_matrix(actual_label,predicted_label)\n",
         "  print(matriks)"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -201,8 +201,8 @@
         "  model.fit(\n",
         "    training_data, \n",
         "    training_label, \n",
-        "    epochs = 1,\n",
-        "    # validation_data = (validation_data, validation_label)\n",
+        "    epochs = 10,\n",
+        "    validation_data = (validation_data, validation_label)\n",
         "  )\n",
         "\n",
         "  raw_predicted_label = model.predict(validation_data)\n",
@@ -222,7 +222,7 @@
         "\n",
         "  return model"
       ],
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -288,7 +288,7 @@
         "\n",
         "  return (np.array(randomized_training_data), np.array(randomized_training_label))"
       ],
-      "execution_count": 17,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -298,7 +298,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A9RzWndrPz8v",
-        "outputId": "b2c2355e-3bd7-47b8-fc07-b19a77f7887f"
+        "outputId": "43fc01ab-900f-4764-95d5-15843c73216e"
       },
       "source": [
         "# (general_datas, general_labels) = fetching_information_from_resource()\n",
@@ -312,30 +312,82 @@
         "    validation_labels\n",
         ") = splitting_dataset(tokenized_datas, arrayed_labels, 0.9)\n",
         "unbalanced_model = training_model(training_datas, training_labels, validation_datas, validation_labels, 'unbalanced_model.h5', 'UNBALANCED MODEL')\n",
-        "\n",
+        "print()\n",
+        "print()\n",
         "(balanced_datas, balanced_labels) = undersampling_dataset(tokenized_datas, arrayed_labels)\n",
         "\n",
         "balanced_model = training_model(balanced_datas, balanced_labels, validation_datas, validation_labels, 'balanced_model.h5', 'BALANCED MODEL')"
       ],
-      "execution_count": 20,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "--- UNBALANCED MODEL ---\n",
-            "563/563 [==============================] - 96s 87ms/step - loss: 0.5431 - accuracy: 0.6861 - recall_3: 0.5499 - precision_3: 0.6099\n",
+            "Epoch 1/10\n",
+            "563/563 [==============================] - 79s 134ms/step - loss: 0.5399 - accuracy: 0.6949 - recall_2: 0.5754 - precision_2: 0.6193 - val_loss: 0.4717 - val_accuracy: 0.7440 - val_recall_2: 0.6462 - val_precision_2: 0.6726\n",
+            "Epoch 2/10\n",
+            "563/563 [==============================] - 75s 134ms/step - loss: 0.4469 - accuracy: 0.7749 - recall_2: 0.7260 - precision_2: 0.7074 - val_loss: 0.4508 - val_accuracy: 0.7675 - val_recall_2: 0.7154 - val_precision_2: 0.6893\n",
+            "Epoch 3/10\n",
+            "563/563 [==============================] - 76s 134ms/step - loss: 0.3913 - accuracy: 0.8189 - recall_2: 0.7871 - precision_2: 0.7596 - val_loss: 0.4243 - val_accuracy: 0.7820 - val_recall_2: 0.7010 - val_precision_2: 0.7218\n",
+            "Epoch 4/10\n",
+            "563/563 [==============================] - 74s 132ms/step - loss: 0.3403 - accuracy: 0.8512 - recall_2: 0.8349 - precision_2: 0.7955 - val_loss: 0.4149 - val_accuracy: 0.8130 - val_recall_2: 0.8068 - val_precision_2: 0.7322\n",
+            "Epoch 5/10\n",
+            "563/563 [==============================] - 76s 134ms/step - loss: 0.2834 - accuracy: 0.8790 - recall_2: 0.8756 - precision_2: 0.8262 - val_loss: 0.4042 - val_accuracy: 0.8265 - val_recall_2: 0.8629 - val_precision_2: 0.7320\n",
+            "Epoch 6/10\n",
+            "563/563 [==============================] - 76s 134ms/step - loss: 0.2399 - accuracy: 0.9046 - recall_2: 0.9138 - precision_2: 0.8532 - val_loss: 0.3871 - val_accuracy: 0.8490 - val_recall_2: 0.8407 - val_precision_2: 0.7816\n",
+            "Epoch 7/10\n",
+            "563/563 [==============================] - 76s 135ms/step - loss: 0.1939 - accuracy: 0.9252 - recall_2: 0.9338 - precision_2: 0.8822 - val_loss: 0.4048 - val_accuracy: 0.8580 - val_recall_2: 0.9164 - val_precision_2: 0.7614\n",
+            "Epoch 8/10\n",
+            "563/563 [==============================] - 75s 134ms/step - loss: 0.1684 - accuracy: 0.9382 - recall_2: 0.9443 - precision_2: 0.9026 - val_loss: 0.4320 - val_accuracy: 0.8570 - val_recall_2: 0.9125 - val_precision_2: 0.7614\n",
+            "Epoch 9/10\n",
+            "563/563 [==============================] - 74s 132ms/step - loss: 0.1413 - accuracy: 0.9481 - recall_2: 0.9544 - precision_2: 0.9166 - val_loss: 0.4472 - val_accuracy: 0.8765 - val_recall_2: 0.9217 - val_precision_2: 0.7906\n",
+            "Epoch 10/10\n",
+            "563/563 [==============================] - 75s 134ms/step - loss: 0.1183 - accuracy: 0.9571 - recall_2: 0.9619 - precision_2: 0.9309 - val_loss: 0.4742 - val_accuracy: 0.8785 - val_recall_2: 0.9360 - val_precision_2: 0.7870\n",
             "tf.Tensor(\n",
-            "[[906 319]\n",
-            " [191 584]], shape=(2, 2), dtype=int32)\n",
+            "[[1040  194]\n",
+            " [  49  717]], shape=(2, 2), dtype=int32)\n",
+            "\n",
+            "\n",
             "--- BALANCED MODEL ---\n",
-            "489/489 [==============================] - 45s 87ms/step - loss: 0.5596 - accuracy: 0.6943 - recall_4: 0.8266 - precision_4: 0.6537\n",
+            "Epoch 1/10\n",
+            "489/489 [==============================] - 72s 138ms/step - loss: 0.5586 - accuracy: 0.6879 - recall_3: 0.7969 - precision_3: 0.6542 - val_loss: 0.4605 - val_accuracy: 0.7425 - val_recall_3: 0.8956 - val_precision_3: 0.6120\n",
+            "Epoch 2/10\n",
+            "489/489 [==============================] - 67s 138ms/step - loss: 0.4495 - accuracy: 0.7822 - recall_3: 0.8517 - precision_3: 0.7477 - val_loss: 0.3946 - val_accuracy: 0.8110 - val_recall_3: 0.8851 - val_precision_3: 0.7004\n",
+            "Epoch 3/10\n",
+            "489/489 [==============================] - 67s 138ms/step - loss: 0.3894 - accuracy: 0.8215 - recall_3: 0.8664 - precision_3: 0.7950 - val_loss: 0.3801 - val_accuracy: 0.8220 - val_recall_3: 0.9413 - val_precision_3: 0.6986\n",
+            "Epoch 4/10\n",
+            "489/489 [==============================] - 68s 138ms/step - loss: 0.3344 - accuracy: 0.8556 - recall_3: 0.8916 - precision_3: 0.8317 - val_loss: 0.3105 - val_accuracy: 0.8705 - val_recall_3: 0.9034 - val_precision_3: 0.7891\n",
+            "Epoch 5/10\n",
+            "489/489 [==============================] - 68s 138ms/step - loss: 0.2809 - accuracy: 0.8863 - recall_3: 0.9119 - precision_3: 0.8676 - val_loss: 0.2753 - val_accuracy: 0.8890 - val_recall_3: 0.9399 - val_precision_3: 0.8036\n",
+            "Epoch 6/10\n",
+            "489/489 [==============================] - 68s 138ms/step - loss: 0.2328 - accuracy: 0.9119 - recall_3: 0.9285 - precision_3: 0.8986 - val_loss: 0.2809 - val_accuracy: 0.8955 - val_recall_3: 0.9595 - val_precision_3: 0.8050\n",
+            "Epoch 7/10\n",
+            "489/489 [==============================] - 68s 139ms/step - loss: 0.1946 - accuracy: 0.9278 - recall_3: 0.9407 - precision_3: 0.9171 - val_loss: 0.2559 - val_accuracy: 0.9115 - val_recall_3: 0.9726 - val_precision_3: 0.8269\n",
+            "Epoch 8/10\n",
+            "489/489 [==============================] - 68s 139ms/step - loss: 0.1552 - accuracy: 0.9453 - recall_3: 0.9587 - precision_3: 0.9338 - val_loss: 0.2669 - val_accuracy: 0.9150 - val_recall_3: 0.9896 - val_precision_3: 0.8239\n",
+            "Epoch 9/10\n",
+            "489/489 [==============================] - 67s 137ms/step - loss: 0.1332 - accuracy: 0.9521 - recall_3: 0.9631 - precision_3: 0.9423 - val_loss: 0.2606 - val_accuracy: 0.9200 - val_recall_3: 0.9817 - val_precision_3: 0.8374\n",
+            "Epoch 10/10\n",
+            "489/489 [==============================] - 68s 139ms/step - loss: 0.1114 - accuracy: 0.9613 - recall_3: 0.9724 - precision_3: 0.9512 - val_loss: 0.2332 - val_accuracy: 0.9375 - val_recall_3: 0.9856 - val_precision_3: 0.8688\n",
             "tf.Tensor(\n",
-            "[[720 505]\n",
-            " [ 72 703]], shape=(2, 2), dtype=int32)\n"
+            "[[1120  114]\n",
+            " [  11  755]], shape=(2, 2), dtype=int32)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gGhMVYQPgQDO"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
